--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^5.4.20",
     "npm": "^6.9.0",
     "optimist": "^0.6.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "vue-cli": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
